--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0; 
+  margin: 0;
+  overflow-x: hidden; 
+  /* Add a maximum width to the body */
+  max-width: 900px; /* Adjust this value as needed */
+  margin-left: auto;
+  margin-right: auto; 
 }
-
-
 
 header {
   display: flex;
