--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow-x: hidden; 
-  /* Add a maximum width to the body */
-  max-width: 900px; /* Adjust this value as needed */
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto; 
 }
@@ -19,7 +18,7 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 85%;
+  width: 90%;
   flex-wrap: wrap;
   /* margin: 10px auto;
   padding: 10px;  */
@@ -41,9 +40,9 @@ header {
   border: none;
   cursor: pointer;
   color: white;
-  margin: -20px 0px 0px 0px;
-  height: 50px;
-  width: 40px;
+  margin: -10px 0px 0px 0px;
+  /* height: 50px;
+  width: 40px; */
 }
 
 .score-container {
@@ -104,8 +103,11 @@ header {
 .tile-512 { background-color: #edc850; color: #f9f6f2; }
 .tile-1024 { background-color: #edc53f; color: #f9f6f2; }
 .tile-2048 { background-color: #edc22e; color: #f9f6f2; }
+.tile-4096 { background-color: #a6c!important; color: #f9f6f2; }
+.tile-8192 { background-color: #95c!important; color: #f9f6f2; }
+.tile-16384 { background-color: #84c!important; color: #f9f6f2; }
+.tile-32768 { background-color: #80c!important; color: #f9f6f2; }
 
-/* Animation for new tiles */
 .new-tile {
   animation: scaleUp 0.2s ease;
 }
@@ -145,7 +147,7 @@ footer {
 /* Style for the game over overlay */
 #game-over-overlay {
   position: fixed; 
-  top: 55.5px;
+  top: 55px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -160,7 +162,7 @@ footer {
 
 #game-over-message {
   background-color: #00000075; 
-  padding: 66px 22.5px;
+  padding: 68px 22.5px;
   border-radius: 15px;
   text-align: center;
   font-size: 2em;
@@ -212,7 +214,7 @@ footer {
 
 #win-modal {
     position: fixed; 
-    top: 55.8px;
+    top: 54.8px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -247,7 +249,7 @@ footer {
 
   .reload-button {
     font-size: 2.5em;        /* Larger reload button for larger screens */
-    margin: -20px 0px 0px 0px;
+    margin: -12px 0px 0px 0px;
   }
 
   .score-container {
@@ -278,19 +280,19 @@ footer {
   } 
   
   #game-over-overlay {
-    top: 43.4px
+    top: 41.5px
   }
 
   #game-over-message {
-    padding: 132.8px 89px;
+    padding: 133px 89px;
   }
 
   #win-modal {
-    top: 43.5px;
+    top: 41px;
   }
 
   #win-message {
-  padding: 98.7px 71.3px;
+  padding: 99px 71.3px;
   font-size: 2em;
   }
   .button-81 {
